<resources>
    <string name="app_name">Personalize</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="led_options">LED Options</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen Options</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="performance">Performance</string>
    <string name="title_about">About TheCollective</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_led">LED Control</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_user_interface_reset">Reset notification wallpaper</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>
    <string name="devs">The Crew</string>
    <string name="aocp">Android Open Collective Project</string>
    <string name="aocp_website_title">TheCollective Website</string>
    <string name="aocp_website_summary">www.aocp.co - Find all newest releases here.</string>
    <string name="aocp_source_title">TheCollective Source</string>
    <string name="aocp_source_summary">TheCollective is fully open source. You can always check out the latest source at github.com/aocp</string>
    <string name="aocp_review_title">TheCollective Code Review</string>
    <string name="aocp_review_summary">TheCollective\'s Gerrit Review instance for submitting and testing patches</string>
    <string name="aocp_gplus_title">Join us on GooglePlus</string>
    <string name="aocp_gplus_summary">https://plus.google.com/118410901028408865706/posts</string>
    <string name="about_aocp">About TheCollective</string>
    <string name="about_aocp_summary">@null</string>
	<string name="profile_johnsondr80">http://forum.xda-developers.com/member.php?u=3314129</string>
	<string name="profile_ruger94">http://forum.xda-developers.com/member.php?u=3716027</string>
	<string name="profile_fezzy102">http://forum.xda-developers.com/member.php?u=3199956</string>
	<string name="profile_danarki">http://forum.xda-developers.com/member.php?u=4023855</string>
	<string name="profile_boog">http://forum.xda-developers.com/member.php?u=983346</string>
	<string name="profile_crt60">http://forum.xda-developers.com/member.php?u=813691</string>
	<string name="profile_dman3285">http://forum.xda-developers.com/member.php?u=2879389</string>
	<string name="profile_robm1911">http://forum.xda-developers.com/member.php?u=3232214</string>
	<string name="profile_mortem_taum">http://forum.xda-developers.com/member.php?u=3595808</string>
	<string name="profile_silverwrx03">http://forum.xda-developers.com/member.php?u=3067981</string>
	<string name="profile_kingmurry">http://forum.xda-developers.com/member.php?u=3509434</string>
	<string name="profile_ee23hd2">http://forum.xda-developers.com/member.php?u=2535093</string>
	<string name="profile_plexicle">http://forum.xda-developers.com/member.php?u=4493228</string>
	<string name="profile_kornklown69">http://forum.xda-developers.com/member.php?u=3534303</string>
    <string name="enable_volume_options">Enable Volume Panel</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications on the status bar</string>
    <string name="disable_bootanimation_title">Disable boot animation</string>
    <string name="notification_wallpaper_title">Choose notification background</string>
    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="alpha_dialog_title">Set alpha value</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In statusbar, while typing (requires reboot)</string>
    <string name="toggle_style_title">Toggle style</string>
    <string name="toggle_style_summary">Whether to show icons or text on your toggles.</string>
    <string name="toggles_layout_title">Toggle Layout</string>
    <string name="enabled_toggles_title">Enabled toggles</string>
    <string name="enabled_toggles_summary">Choose toggles to display</string>
    <string name="toggles_display_dialog">Choose which toggles to use</string>
    <string name="toggles_display_close">Close</string>
    <string name="toggles_order_title">Toggle order</string>
    <string name="toggles_order_summary">Choose the order which your toggles are displayed</string>
    <string name="brightness_location_title">Brightness location</string>
    <string name="reset_toggles_title">Reset toggles</string>
    <string name="reset_toggles_summary">Reset all toggles and their order</string>
    <string name="toggle_button_alpha_title">Toggle indicator alpha</string>
    <string name="toggle_btn_enabled_color_title">Enabled indicator color</string>
    <string name="toggle_btn_disabled_color_title">Disabled indicator color</string>
    <string name="clock_title_enable">Clock style</string>
    <string name="title_clock_ampm_entries">AM/PM style</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="toggle_airplane_mode">Airplane Mode</string>
    <string name="toggle_auto_rotate">Auto Rotate</string>
    <string name="toggle_bluetooth">Bluetooth</string>
    <string name="toggle_fast_charge">Fast Charge</string>
    <string name="toggle_gps">GPS</string>
    <string name="toggle_lte">LTE</string>
    <string name="toggle_data">Data</string>
    <string name="toggle_nfc">NFC</string>
    <string name="toggle_silent">Silent</string>
    <string name="toggle_pimped">Pimped</string>
    <string name="toggle_sync">Sync</string>
    <string name="toggle_torch">Torch</string>
    <string name="toggle_2g">2G</string>
    <string name="toggle_usb_tether">USB Tether</string>
    <string name="toggle_vibrate">Vibrate</string>
    <string name="toggle_wifi_ap">Tether</string>
    <string name="toggle_wifi">Wi-Fi</string>
    <string name="battery_icon">Battery icon style</string>
    <string name="battery_not_title">Battery icon in notifications</string>
    <string name="battery_not_summary">Battery icon will show up where the clear all button shows up</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_cat">Battery bar options</string>
    <string name="battery_bar_style_title">Battery bar style</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_animate_summary">The charging animation may result in a poor user experience. Enable at your own discretion.</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">Holo</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="navbar_button_cat">Navigation bar buttons</string>
    <string name="title_pref_menu_display">Menu location</string>
    <string name="summary_pref_menu_display">Remember to remove your menu buttons if you\'re using the big menu button!</string>
    <string name="lockscreen_menu_unlock_title">Menu unlock</string>
    <string name="lockscreen_menu_unlock_summary">Use the menu key to unlock the screen</string>
    <string name="lockscreen_quick_unlock_control_title">Quick pin unlock</string>
    <string name="lockscreen_quick_unlock_control_summary">Unlock password/pin lockscreen without pressing enter button</string>
    <string name="lockscreen_battery_title">Lockscreen battery percentage</string>
    <string name="lockscreen_battery_summary">Always show battery percentage on the lockscreen</string>
    <string name="volume_rocker_wake_title">Volume wake</string>
    <string name="volume_rocker_wake_summary">Wake screen with volume rockers</string>
    <string name="lockscreen_wallpaper_title">Choose lockscreen wallpaper</string>
    <string name="lockscreen_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="title_lockscreen_user_timeout_override">Wait to lock screen</string>
    <string name="summary_lockscreen_user_timeout_override">Use Android\'s timeout setting after you manually turn the screen off. The default behavior is to use the delay only when the screen times out by itself.</string>
    <string name="lockscreen_weather_cat">Weather</string>
    <string name="lockscreen_weather_title">Enable</string>
    <string name="lockscreen_weather_summary">Show Weather Information on Lockscreen. You need to enable AoCP\'s Weather service to use this</string>
    <string name="lockscreen_weather_type_title">Lockscreen Weather style</string>
    <string name="lockscreen_weather_type_summary">Whether to show graphical or text weather information.</string>
</resources>