<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="wallpaper"
        android:title="@string/lockscreen_wallpaper_title"
        android:summary="@string/lockscreen_wallpaper_summary" />

    <CheckBoxPreference
        android:key="lockscreen_battery"
        android:title="@string/lockscreen_battery_title"
        android:summary="@string/lockscreen_battery_summary" />

    <CheckBoxPreference
        android:key="lockscreen_user_timeout_override"
        android:title="@string/title_lockscreen_user_timeout_override"
        android:summary="@string/summary_lockscreen_user_timeout_override" />

    <CheckBoxPreference
	android:key="lockscreen_menu_unlock"
	android:title="@string/lockscreen_menu_unlock_title"
	android:summary="@string/lockscreen_menu_unlock_summary" />
    
    <CheckBoxPreference
        android:key="volume_rocker_wake"
        android:title="@string/volume_rocker_wake_title"
        android:summary="@string/volume_rocker_wake_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:key="weather_cat"
        android:title="@string/lockscreen_weather_cat">
        
        <CheckBoxPreference
            android:key="lockscreen_weather"
            android:title="@string/lockscreen_weather_title"
            android:summary="@string/lockscreen_weather_summary" />

        <ListPreference
	        android:key="lockscreen_weather_type"
	        android:entries="@array/pref_lockscreen_weather_type_entries"
	        android:entryValues="@array/pref_lockscreen_weather_type_values"
	        android:dependency="lockscreen_weather"
	        android:title="@string/lockscreen_weather_type_title"
	        android:summary="@string/lockscreen_weather_type_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="advanced_cat"
        android:title="@string/advanced_settings">

    <CheckBoxPreference
        android:key="lockscreen_quick_unlock_control"
        android:title="@string/lockscreen_quick_unlock_control_title"
        android:summary="@string/lockscreen_quick_unlock_control_summary" />

    </PreferenceCategory>
</PreferenceScreen>
