<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:aocp="http://schemas.android.com/apk/res/com.collective.personalize">

	<PreferenceCategory
		android:key="aocp"
		android:title="@string/aocp">

		<Preference
			android:key="aocp_website"
			android:title="@string/aocp_website_title"
			android:summary="@string/aocp_website_summary" />

		<Preference
			android:key="aocp_source"
			android:title="@string/aocp_source_title"
			android:summary="@string/aocp_source_summary" />
<!-- Commented Out For Now Till Set Up
		<Preference
			android:key="aocp_review"
			android:title="@string/aocp_review_title"
			android:summary="@string/aocp_review_summary" /> -->

		<Preference
			android:key="aocp_gplus"
			android:title="@string/aocp_gplus_title"
			android:summary="@string/aocp_gplus_summary" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="devs"
		android:title="@string/devs">
		<com.collective.personalize.widgets.DeveloperPreference
			android:title="David"
			aocp:nameDev="Johnsondr80"
			aocp:twitterHandle="CollectiveDevs"
			aocp:profileLink="@string/profile_johnsondr80" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Tim"
			aocp:nameDev="Ruger94"
			aocp:twitterHandle="ruger94"
			aocp:profileLink="@string/profile_ruger94" />
		
		<com.collective.personalize.widgets.DeveloperPreference
			android:title="John"
			aocp:nameDev="Fezzy102"
			aocp:twitterHandle="fezzy1022"
			aocp:profileLink="@string/profile_fezzy102" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Dan"
			aocp:nameDev="DaNaRkI"
			aocp:twitterHandle="CollectiveDevs"
			aocp:profileLink="@string/profile_danarki" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Jason"
			aocp:nameDev="Boog"
			aocp:twitterHandle="CollectiveDevs"
			aocp:profileLink="@string/profile_boog" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Roger"
			aocp:nameDev="Crt60"
			aocp:twitterHandle="CollectiveDevs"
			aocp:profileLink="@string/profile_crt60" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Damon"
			aocp:nameDev="Dman3285"
			aocp:twitterHandle="dman32855"
			aocp:profileLink="@string/profile_dman3285" />
		
		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Rob"
			aocp:nameDev="Robm1911"
			aocp:twitterHandle="robm1911"
			aocp:profileLink="@string/profile_robm1911" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Alex H."
			aocp:nameDev="MortemTaum"
			aocp:twitterHandle="CollectiveDevs"
			aocp:profileLink="@string/profile_mortem_taum" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Lawarnce"
			aocp:nameDev="Silverwrx03"
			aocp:twitterHandle="lawrencepeach"
			aocp:profileLink="@string/profile_silverwrx03" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Leslie"
			aocp:nameDev="KingMurry"
			aocp:twitterHandle="CollectiveDevs"
			aocp:profileLink="@string/profile_kingmurry" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Eric"
			aocp:nameDev="EE23HD2"
			aocp:twitterHandle="ee23hd2"
			aocp:profileLink="@string/profile_ee23hd2" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Alex P."
			aocp:nameDev="Plexicle"
			aocp:twitterHandle="alexpaluzzi"
			aocp:profileLink="@string/profile_plexicle" />

		<com.collective.personalize.widgets.DeveloperPreference
			android:title="Carlos"
			aocp:nameDev="KornKlown69"
			aocp:twitterHandle="krowwf"
			aocp:profileLink="@string/profile_kornklown69" />

	</PreferenceCategory>

</PreferenceScreen>
